--- a/GymReservation/Views/GymClasses/Details.cshtml
+++ b/GymReservation/Views/GymClasses/Details.cshtml
@@ -33,6 +33,16 @@
         <dd>
             @Html.DisplayFor(model => model.Description)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.AttendingMembers)
+        </dt>
+        @foreach (var attendingMember in Model.AttendingMembers)
+        {
+            <dd>
+                @attendingMember.Email
+            </dd>
+        }
+        
 
     </dl>
 </div>
