--- a/GymReservation/Views/GymClasses/Index.cshtml
+++ b/GymReservation/Views/GymClasses/Index.cshtml
@@ -29,7 +29,7 @@
     </tr>
     @foreach (var item in Model)
     {
-        if (item.StartTime> DateTime.Now.Date)
+        if (item.StartTime> DateTime.Now)
         {
 
 
