--- a/GymReservation/Views/GymClasses/Index.cshtml
+++ b/GymReservation/Views/GymClasses/Index.cshtml
@@ -10,6 +10,9 @@
     <p>
         @Html.ActionLink("Create New", "Create")
     </p>
+<p>
+    @Html.ActionLink("Gym History", "History")
+</p>
 }
 <table class="table">
     <tr>
