--- a/GymReservation/Views/Shared/_Layout.cshtml
+++ b/GymReservation/Views/Shared/_Layout.cshtml
@@ -21,7 +21,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    @*<li>@Html.ActionLink("GymClasses", "Index", "GymClasses")</li>*@
+                    <li>@Html.ActionLink("GymClasses", "Index", "GymClasses")</li>
+                    <li>@Html.ActionLink("Reserved Workout", "Reservation", "GymClasses")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
