--- a/GymReservation/Views/Shared/_Layout.cshtml
+++ b/GymReservation/Views/Shared/_Layout.cshtml
@@ -6,7 +6,6 @@
     <title>@ViewBag.Title - Gymbokning</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -21,8 +20,12 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("GymClasses", "Index", "GymClasses")</li>
-                    <li>@Html.ActionLink("Reserved Workout", "Reservation", "GymClasses")</li>
+                    @if (Request.IsAuthenticated)
+                    {
+                        <li>@Html.ActionLink("GymClasses", "Index", "GymClasses")</li>
+                        <li>@Html.ActionLink("Reserved Workout", "Reservation", "GymClasses")</li>
+                    }
+                    
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
